--- a/data/contact.yaml
+++ b/data/contact.yaml
@@ -1,3 +1,3 @@
-email: 'hugoserif@example.com'
-phone: '1800 123 000'
+email: 'contact@swisstch.tech'
+phone: '+41 22 123 45 67'
 contact_button_link: 'contact'
